# InvokePython

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml
cli/: CMakeLists.txt  main.cpp
include/: invokepython.hpp
src/: CMakeLists.txt  invokepython.cpp
tests/: CMakeLists.txt  test_invokepython.cpp
